--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Color game</title>
-    <link rel="stylesheet" href="colorGame.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- 1. lets make our color squares -->
