updated name of index.js

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ id="hardbtn" -->
   <div class="square"></div>
 </div>
 
-<script type="text/javascript" src="colorGameJS.js">
+<script type="text/javascript" src="index.js">
 </script>
   </body>
 </html>
